modified the css

--- a/validation/ese8.html
+++ b/validation/ese8.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="ese6style.css">
+    <link rel="stylesheet" href="ese8style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,8 +54,8 @@
                 <option value="advance plan">advance 40$</option>
                 <option value="full plan">full 120$</option>
             </select>
-            <input type="checkbox" name="pro-plan"checked required>
-            <label for="pro-plan">pro plan</label required>
+            <input type="checkbox" name="pro-plan"checked required><br>
+            <label for="pro-plan">pro plan</label required><br>
         </div>
 
         <div class="form-credit-card">
