--- a/rules/index.html
+++ b/rules/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rules</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="rules.style.css">
   </head>
   <body>
     <div class="ball"></div>
